--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Indy Mandi</string>
+    <string name="default_web_client_id">1085172821890-n17m44c3iigbink292hmsthqrp59vt2t.apps.googleusercontent.com</string>
 </resources>
